[gd_scene load_steps=4 format=3 uid="uid://duvmnbujl5for"]

[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="1_w1fl3"]
[ext_resource type="PackedScene" uid="uid://d34hkypk02kw1" path="res://Scenes/Common/Buttons/settings_managed_text_button.tscn" id="2_fomqe"]
[ext_resource type="Script" path="res://Scenes/Common/Buttons/Scripts/accept_cancel_buttons.gd" id="2_ixgb0"]

[node name="AcceptCancelButtons" type="Control"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 6
theme = ExtResource("1_w1fl3")
script = ExtResource("2_ixgb0")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_w1fl3")
alignment = 2

[node name="CancelButton" parent="HBoxContainer" instance=ExtResource("2_fomqe")]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
button_text = "Cancel"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
theme = ExtResource("1_w1fl3")

[node name="AcceptButton" parent="HBoxContainer" instance=ExtResource("2_fomqe")]
custom_minimum_size = Vector2(150, 50)
layout_mode = 2
button_text = "Accept"

[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/AcceptButton" to="." method="_on_accept_button_pressed"]
